# ArchiClaude

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: Dockerfile.dev  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260416_0001_init.py  20260416_0002_feature_flags.py  20260416_0003_users_audit_logs.py  20260417_0001_parcels_plu_servitudes.py  20260417_0002_comparable_projects_commune_sru.py  20260417_0003_zone_rules.py  20260418_0001_projects.py  20260418_0002_rag_jurisprudences_recours_versions.py  20260418_0003_reports_agency.py  20260419_0001_pcmi_dossiers.py  20260419_0002_pcmi6_renders.py  20260419_0003_sp5_multi_user.py  20260419_0004_enable_rls.py  20260419_0005_building_model_templates.py
apps/backend/api/: deps.py  main.py
apps/backend/api/middleware/: cost_tracking.py
apps/backend/api/routes/: agency.py  auth.py  bilan.py  building_model.py  health.py  invitations.py  notifications.py  parcels.py  pcmi.py  pcmi6.py  plu.py  programming.py  projects.py  rag.py  rendering.py  reports.py  site.py  templates.py  versions.py  workspaces.py
apps/backend/core/: cache.py  flags.py  http_client.py
apps/backend/core/analysis/: architect_analysis.py  architect_prompt.py  pre_instruction.py  refusal_patterns.py  risk_score.py  shadow.py  validation.py  vue_analysis.py
apps/backend/core/architecture/: __init__.py  library.py
apps/backend/core/auth/: __init__.py  jwt_utils.py  password.py
apps/backend/core/building_model/: __init__.py  layout_dispatcher.py  layout_l.py  pipeline.py  schemas.py  solver.py  validator.py
apps/backend/core/compliance/: __init__.py  incendie.py  lls_sru.py  pmr.py  re2020.py  rsdu.py
apps/backend/core/plu/: prompt.py  (+8 more)
apps/backend/db/: base.py  session.py
apps/backend/schemas/: agency.py  auth.py  building_model_api.py  feature_flag.py  invitation.py  notification.py  parcel.py  pcmi.py  pcmi6.py  plu.py  programming.py  project.py  rag.py  rendering.py  report.py  site.py  template_api.py  version.py  workspace.py
apps/backend/scripts/: generate_ts_schemas.py  seed_templates.py  smoke_test.py  verify_l_layout_landlocked.py
apps/backend/tests/: conftest.py
apps/backend/workers/: extraction.py  feasibility.py  main.py  pcmi.py  pcmi6.py  pcmi6_retention.py  pdf.py  programming.py  rag_ingest.py
(+417 files in other folders)
