[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archiclaude-backend"
version = "0.1.0"
description = "ArchiClaude backend — faisabilité architecturale IDF"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]==0.115.4",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.18",

    # DB
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.13.3",
    "pgvector==0.3.5",

    # Data modeling
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",

    # HTTP client
    "httpx==0.27.2",
    "tenacity==9.0.0",

    # LLM
    "anthropic==0.39.0",

    # Workers
    "arq==0.26.1",
    "redis==5.2.0",

    # Geospatial
    "shapely==2.0.6",
    "pyproj==3.7.0",
    "geopandas==1.0.1",
    "rasterio==1.4.2",

    # PDF generation
    "weasyprint==63.0",
    "jinja2==3.1.4",
    "pypdf==5.1.0",
    "pdfplumber==0.11.4",

    # Auth
    "passlib[bcrypt]==1.7.4",
    "pyjwt[crypto]==2.9.0",
    "slowapi==0.1.9",

    # Logging / observabilité
    "structlog==24.4.0",

    # Config fixtures
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-httpx==0.33.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "types-PyYAML==6.0.12.20240917",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "db", "schemas", "workers"]

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "RET", "SIM", "TCH"]
ignore = ["E501"]  # line length géré par formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["shapely.*", "pyproj.*", "geopandas.*", "rasterio.*", "weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["core", "api", "db", "schemas", "workers"]
branch = true
omit = ["*/tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
